# Computational-Geometry-2015

./: .gitignore
lab1/: CMakeLists.txt  compile.sh  main  main.cpp  podsumowanie.txt  pointsA.txt  pointsB.txt  pointsC.txt  pointsD.txt  run.sh  sprawozdanie.odt
lab1/libraries/cpp/: active.hpp  common.hpp  container.hpp  gogui.hpp  history.hpp  line.hpp  point.hpp  print_json.hpp  supervisor.hpp  vector.hpp
lab1/matplotlib/: main.py  plot.py
lab1/predicates/: predicates.c  predicates.h
lab1/server/: server.js
lab1/visualization/: index.html
lab1/visualization/data/: data.json
lab1/visualization/js/: DataRepository.js  FileDataReader.js  InputDataReader.js  Line.js  Point.js  Snapshot.js  SnapshotsIterator.js  scripts.js
lab1/visualization/resources/: style.css
lab2/: grahamA.txt  grahamB.txt  grahamC.txt  grahamD.txt  jarvisA.txt  jarvisB.txt  jarvisC.txt  jarvisD.txt  main.py  plots.py  primitives.py  solvers_no_animation.py  sprawozdanie.odt
lab3/: event_class.py  intersection.py  intersection_test.py  main.py  point.py  segment.py  segment_id.py  segments_io.py  sprawozdanie.odt  state_class.py  sweeping.py  utils.py
lab3/alg_test/: expected_output1.txt  expected_output2.txt  expected_output3.txt  expected_output4.txt  test.py  (+3 more)
lab4/: Segment.py  SegmentList.py  Triangle.py  classification.py  main.py  orient.py  point.py  points_io.py  triangulation.py  utils.py
project/: Point.py  io.py  kdtree.py  kdtree2.py  kdtree_visualisation.py  main.py  points_io.py  quadtree.py  quadtree_visualisation.py  simple_algorithms.py  visualisation_utils.py
(+21 files in other folders)
